# UITesla

./: CMakeLists.txt  README.md  assets.qrc  main.cpp
Controllers/: audiocontroler.cpp  audiocontroler.h  hvachandler.cpp  hvachandler.h  system.cpp  system.h
ui/BottomBar/: BottomBar.qml  HVAComponent.qml  audiocontroler.cpp  audiocontroler.h
ui/LeftScreen/: LeftScreen.qml
ui/RightScreen/: NavigationSearchBox.qml  RightScreen.qml
